@@ -48,33 +48,16 @@
 			</control>
 			
 			<!--system info indicator-->
-			<control type="group">
-				<posx>11-col</posx>
-				<posy>4-row</posy>
-
-				<control type="label">
-					<posx>2</posx>
-					<posy>-18</posy>
-					<width>24</width>
-					<align>left</align>
-					<font>regularStrong</font>
-					<textcolor>white</textcolor>
-					<label>›</label>
-					<animation effect="rotate" end="90" center="auto" time="0">windowopen</animation>
-					<animation effect="rotate" end="90" center="auto" time="0">windowclose</animation>
-				</control>
-
-				<control type="label">
-					<posx>36</posx>
-					<posy>-12</posy>
-					<width>4-col</width>
-					<align>left</align>
-					<font>smallMedium</font>
-					<textcolor>white</textcolor>
-					<label>30213</label>
-				</control>
+			<control type="label">
+				<posx>0</posx>
+				<posy>214</posy>
+				<width>24-col</width>
+				<align>center</align>
+				<font>smallMedium</font>
+				<textcolor>white</textcolor>
+				<label>$LOCALIZE[30213]     $LOCALIZE[30218]</label>
 			</control>
-			
+							
 		</control>
 										
 		<!--browse controls-->
@@ -92,6 +75,7 @@
 				<height>3-col</height>
 				<orientation>horizontal</orientation>
 				<onup>ActivateWindow(systeminfo)</onup>	
+				<ondown>ActivateWindow(weather)</ondown>
 
 				<itemlayout width="3-col" height="3-col">
 
