@@ -1,191 +1,209 @@
 <window id="2600">
 	<defaultcontrol always="true">9000</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
+	<animation effect="fade" start="100" end="0" time="300">WindowClose</animation>
+	<animation effect="fade" start="0" end="100" time="1000" reversible="true">WindowOpen</animation>
 
 	<controls>
-
-		<include>globalBackground</include>
-
-		<control type="label">
-			<include>WindowID</include>
-			<label>MyWeather.xml</label>
+		
+		<!--background-->
+		<include>fanartSlides</include>	
+		<control type="image">
+			<include>dimensionsFullscreen</include>
+			<texture>colors/black.png</texture>
+			<colordiffuse>ccFFFFFF</colordiffuse>
+			<aspectratio>stretch</aspectratio>
 		</control>
-
+		
 		<control type="group">
-			<posx>420</posx>
-			<posy>120</posy>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>600</width>
-				<height>450</height>
-				<texture border="22">colors/black.png</texture>
+			<posx>col-1-begin</posx>
+			<posy>row-5-begin</posy>
+			
+			<!--general info-->
+			<control type="group">				
+				<control type="label">
+					<description>weather location</description>
+					<posx>0</posx>
+					<posy>0</posy>
+					<width>24-col</width>
+					<align>center</align>
+					<font>veryLarge</font>
+					<textcolor>white</textcolor>
+					<label>$INFO[Window.Property(Location)]</label>
+				</control>
 			</control>
-
-			<control type="label">
-				<description>Day 0 Label</description>
+			
+			<!--panel begins-->
+			<control type="panel" id="9000">
 				<posx>0</posx>
-				<posy>0</posy>
-				<width>540</width>
-				<label>$INFO[Window.Property(Day0.Title)]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
+				<posy>3-row</posy>
+				<width>24-col</width>
+				<height>18-row</height>
+				<onup>activateWindow(home)</onup>
+												
+				<itemlayout width="5-col-gutter" height="6-col">								
+																																			
+					<control type="image">
+						<posx>118</posx>
+						<posy>0</posy>
+						<width>3-col-gutter</width>
+						<height>3-col-gutter</height>
+						<aspectratio>keep</aspectratio>
+						<texture>$INFO[listitem.icon]</texture>
+						<colordiffuse>99FFFFFF</colordiffuse>
+					</control>
+					
+					<control type="label">
+						<posx>204</posx>
+						<posy>3-row</posy>
+						<width>6-col-gutter</width>
+						<align>center</align>
+						<font>largeStrong</font>
+						<textcolor>white</textcolor>
+						<label>$INFO[ListItem.Label]</label>
+					</control>
+				
+					<control type="textbox">
+						<posx>36</posx>
+						<posy>234</posy>
+						<width>5-col-gutter</width>
+						<height>2-row</height>
+						<align>center</align>
+						<font>itemTitle</font>
+						<textcolor>white</textcolor>
+						<label>$INFO[ListItem.Property(Outlook)]</label>
+					</control>
+					
+					<control type="textbox">
+						<posx>36</posx>
+						<posy>354</posy>
+						<width>5-col-gutter</width>
+						<height>1-row</height>
+						<align>center</align>
+						<font>itemTitleSmall</font>
+						<textcolor>white</textcolor>
+						<label>High [B]$INFO[ListItem.Property(HighTemp)] $INFO[ListItem.Property(TempUnits)][/B]  Low [B]$INFO[ListItem.Property(LowTemp)] $INFO[ListItem.Property(TempUnits)][/B]</label>
+					</control>
+																
+				</itemlayout>
 
-			<control type="image">
-				<description>Day 0 Icon</description>
-				<posx>153</posx>
-				<posy>69</posy>
-				<height>234</height>
-				<width>234</width>
-				<texture>$INFO[Window.Property(Day0.OutlookIcon)]</texture>
+				<focusedlayout width="6-col" height="6-col">
+					
+					<control type="image">
+						<posx>118</posx>
+						<posy>0</posy>
+						<width>3-col-gutter</width>
+						<height>3-col-gutter</height>
+						<aspectratio>keep</aspectratio>
+						<texture>$INFO[listitem.icon]</texture>
+						<colordiffuse>99FFFFFF</colordiffuse>
+					</control>
+					
+					<control type="label">
+						<posx>204</posx>
+						<posy>3-row</posy>
+						<width>6-col-gutter</width>
+						<align>center</align>
+						<font>largeStrong</font>
+						<textcolor>white</textcolor>
+						<label>$INFO[ListItem.Label]</label>
+					</control>
+				
+					<control type="textbox">
+						<posx>36</posx>
+						<posy>234</posy>
+						<width>5-col-gutter</width>
+						<height>2-row</height>
+						<align>center</align>
+						<font>itemTitle</font>
+						<textcolor>white</textcolor>
+						<label>$INFO[ListItem.Property(Outlook)]</label>
+					</control>
+					
+					<control type="textbox">
+						<posx>36</posx>
+						<posy>354</posy>
+						<width>5-col-gutter</width>
+						<height>1-row</height>
+						<align>center</align>
+						<font>itemTitleSmall</font>
+						<textcolor>white</textcolor>
+						<label>High [B]$INFO[ListItem.Property(HighTemp)] $INFO[ListItem.Property(TempUnits)][/B]  Low [B]$INFO[ListItem.Property(LowTemp)] $INFO[ListItem.Property(TempUnits)][/B]</label>
+					</control>
+					
+				</focusedlayout>
+				
+				<content>
+					<item id="1">
+						<description>Day 0</description>					
+						<label>$INFO[Window.Property(Day0.Title)]</label>
+						<icon>$INFO[Window.Property(Day0.OutlookIcon)]</icon>
+						<property name="itemIcon">></property>	
+						<property name="HighTemp">$INFO[Window.Property(Day0.HighTemp)]</property>
+						<property name="LowTemp">$INFO[Window.Property(Day0.LowTemp)]</property>
+						<property name="Outlook">$INFO[Window.Property(Day0.Outlook)]</property>
+						<property name="TempUnits">$INFO[System.TemperatureUnits]</property>
+						<onclick>-</onclick>
+					</item>
+					
+					<item id="2">
+						<description>Day 1</description>					
+						<label>$INFO[Window.Property(Day1.Title)]</label>
+						<icon>$INFO[Window.Property(Day1.OutlookIcon)]</icon>
+						<property name="itemIcon">></property>	
+						<property name="HighTemp">$INFO[Window.Property(Day1.HighTemp)]</property>
+						<property name="LowTemp">$INFO[Window.Property(Day1.LowTemp)]</property>
+						<property name="Outlook">$INFO[Window.Property(Day1.Outlook)]</property>
+						<property name="TempUnits">$INFO[System.TemperatureUnits]</property>
+						<onclick>-</onclick>
+					</item>
+					
+					<item id="3">
+						<description>Day 2</description>					
+						<label>$INFO[Window.Property(Day2.Title)]</label>
+						<icon>$INFO[Window.Property(Day2.OutlookIcon)]</icon>
+						<property name="itemIcon">></property>	
+						<property name="HighTemp">$INFO[Window.Property(Day2.HighTemp)]</property>
+						<property name="LowTemp">$INFO[Window.Property(Day2.LowTemp)]</property>
+						<property name="Outlook">$INFO[Window.Property(Day2.Outlook)]</property>
+						<property name="TempUnits">$INFO[System.TemperatureUnits]</property>
+						<onclick>-</onclick>
+					</item>
+					
+					<item id="4">
+						<description>Day 3</description>					
+						<label>$INFO[Window.Property(Day3.Title)]</label>
+						<icon>$INFO[Window.Property(Day3.OutlookIcon)]</icon>
+						<property name="itemIcon">></property>	
+						<property name="HighTemp">$INFO[Window.Property(Day3.HighTemp)]</property>
+						<property name="LowTemp">$INFO[Window.Property(Day3.LowTemp)]</property>
+						<property name="Outlook">$INFO[Window.Property(Day3.Outlook)]</property>
+						<property name="TempUnits">$INFO[System.TemperatureUnits]</property>
+						<onclick>-</onclick>
+					</item>
+					
+					<item id="5">
+						<description>Day 4</description>					
+						<label>$INFO[Window.Property(Day4.Title)]</label>
+						<icon>$INFO[Window.Property(Day4.OutlookIcon)]</icon>
+						<property name="itemIcon">></property>	
+						<property name="HighTemp">$INFO[Window.Property(Day4.HighTemp)]</property>
+						<property name="LowTemp">$INFO[Window.Property(Day4.LowTemp)]</property>
+						<property name="Outlook">$INFO[Window.Property(Day4.Outlook)]</property>
+						<property name="TempUnits">$INFO[System.TemperatureUnits]</property>
+						<onclick>-</onclick>
+					</item>
+					
+				</content>
 			</control>
-
-			<control type="label">
-				<description>Day 0 Temp</description>
-				<posx>0</posx>
-				<posy>302</posy>
-				<width>540</width>
-				<label>[COLOR=Red]$INFO[Window.Property(Day0.LowTemp)]$INFO[System.TemperatureUnits][/COLOR] / [COLOR=Blue]$INFO[Window.Property(Day0.HighTemp)]$INFO[System.TemperatureUnits][/COLOR]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
+			<!--panel ends-->
 		</control>
 
-		<control type="group">
-			<posx>1050</posx>
-			<posy>120</posy>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>600</width>
-				<height>450</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<description>Day 1 Label</description>
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>540</width>
-				<label>$INFO[Window.Property(Day1.Title)]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
-			<control type="image" id="35">
-				<description>Day 1 Icon</description>
-				<posx>153</posx>
-				<posy>69</posy>
-				<height>234</height>
-				<width>234</width>
-				<texture>$INFO[Window.Property(Day1.OutlookIcon)]</texture>
-			</control>
-
-			<control type="label">
-				<description>Day 1 Temp</description>
-				<posx>0</posx>
-				<posy>302</posy>
-				<width>540</width>
-				<label>[COLOR=Red]$INFO[Window.Property(Day1.LowTemp)]$INFO[System.TemperatureUnits][/COLOR] / [COLOR=Blue]$INFO[Window.Property(Day1.HighTemp)]$INFO[System.TemperatureUnits][/COLOR]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
-		</control>
-
-		<control type="group">
-			<posx>420</posx>
-			<posy>585</posy>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>600</width>
-				<height>450</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<description>Day 2 Label</description>
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>540</width>
-				<label>$INFO[Window.Property(Day2.Title)]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
-			<control type="image" id="35">
-				<description>Day 2 Icon</description>
-				<posx>153</posx>
-				<posy>69</posy>
-				<height>234</height>
-				<width>234</width>
-				<texture>$INFO[Window.Property(Day2.OutlookIcon)]</texture>
-			</control>
-
-			<control type="label">
-				<description>Day 2 Temp</description>
-				<posx>0</posx>
-				<posy>302</posy>
-				<width>540</width>
-				<label>[COLOR=Red]$INFO[Window.Property(Day2.LowTemp)]$INFO[System.TemperatureUnits][/COLOR] / [COLOR=Blue]$INFO[Window.Property(Day2.HighTemp)]$INFO[System.TemperatureUnits][/COLOR]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
-		</control>
-
-		<control type="group">
-			<posx>1050</posx>
-			<posy>585</posy>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>600</width>
-				<height>450</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<description>Day 3 Label</description>
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>540</width>
-				<label>$INFO[Window.Property(Day3.Title)]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
-			<control type="image" id="35">
-				<description>Day 3 Icon</description>
-				<posx>153</posx>
-				<posy>69</posy>
-				<height>234</height>
-				<width>234</width>
-				<texture>$INFO[Window.Property(Day3.OutlookIcon)]</texture>
-			</control>
-
-			<control type="label">
-				<description>Day 3 Temp</description>
-				<posx>0</posx>
-				<posy>302</posy>
-				<width>540</width>
-				<label>[COLOR=Red]$INFO[Window.Property(Day3.LowTemp)]$INFO[System.TemperatureUnits][/COLOR] / [COLOR=Blue]$INFO[Window.Property(Day3.HighTemp)]$INFO[System.TemperatureUnits][/COLOR]</label>
-				<font>Large</font>
-				<align>center</align>
-			</control>
-
-		</control>
-
+		<!--dialog controls-->
 		<control type="grouplist" id="9000">
-			<posx>15</posx>
-			<posy>210</posy>
+			<visible>false</visible>
+			<posx>0</posx>
+			<posy>0</posy>
 			<width>330</width>
 			<height>900</height>
 			<itemgap>3</itemgap>
@@ -218,15 +236,12 @@
 
 		</control>
 
-		<control type="label">
-			<description>Location Label</description>
-			<posx>30</posx>
-			<posy>348</posy>
-			<width>180</width>
-			<label>$INFO[Control.GetLabel(3)]</label>
-		</control>
-
+		<!--debugging-->
 		<include>Debug_Grid</include>
+		<control type="label">
+			<include>WindowID</include>
+			<label>MyWeather.xml</label>
+		</control>
 
 	</controls>
 
