@@ -2,6 +2,8 @@
 <window>
 	<defaultcontrol always="true">95</defaultcontrol>
 	<allowoverlay>no</allowoverlay>
+	<animation effect="fade" start="100" end="0" time="300">WindowClose</animation>
+	<animation effect="fade" start="0" end="100" time="1000" reversible="true">WindowOpen</animation>
 	
 	<controls>
 		
@@ -12,12 +14,12 @@
 			<posx>col-1-begin</posx>
 			<posy>row-2-begin</posy>
 			
-			<control type="panel">
+			<control type="panel" id="95">
 				<posx>0</posx>
 				<posy>24</posy>
 				<width>24-col</width>
 				<height>18-row</height>
-				<scrolltime tween="sine" easing="inout">200</scrolltime>
+				<ondown>activateWindow(home)</ondown>
 												
 				<itemlayout width="6-col" height="6-col">								
 																									
@@ -75,7 +77,7 @@
 						<aspectratio>stretch</aspectratio>
 						<texture>colors/black.png</texture>
 						<bordersize>0</bordersize>
-						<colordiffuse>ccFFFFFF</colordiffuse>
+						<colordiffuse>99FFFFFF</colordiffuse>
 					</control>
 					
 					<control type="label">
