@@ -1,5 +1,7 @@
-[B]0.5.1[/B]
-- 
+[B]0.6.0[/B]
+- Weather screen added (press down on homescreen)
+- Various skin-wide tweaks and fixes
+- Music addons and file lists reworked. Should now work properly!
 
 [B]0.5.0[/B]
 - Photo library: basic / limited functionality implemented. Accessed from homescreen.
